refs #14962 時間表示修正

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -6,3 +6,7 @@ ja:
       task:
         name: タスク名
         memo: メモ
+  time:
+    formats:
+      default: "%Y/%m/%d %H:%M:%S"
+      short:  '%b%d'
