refs #14962 localファイルの修正

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -6,7 +6,6 @@ ja:
       task:
         name: タスク名
         memo: メモ
-  time:
-    formats:
-      default: "%Y/%m/%d %H:%M:%S"
-      short:  '%b%d'
+        end_time: 終了期限
+
+
