refs #15695 pry-docの導入/ja.ymlの編集

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       task: タスク
+      user: ユーザー
     attributes:
       task:
         name: タスク名
@@ -10,3 +11,8 @@ ja:
         created_at: 作成時
         status: ステータス
         priority: 優先度
+      user:
+        name: 名前
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: 確認用パスワード
