--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -9,6 +9,7 @@ ja:
         memo: メモ
         end_time: 終了期限
         created_at: 作成時
+        updated_at: 更新時
         status: ステータス
         priority: 優先度
       user:
@@ -16,3 +17,6 @@ ja:
         email: メールアドレス
         password: パスワード
         password_confirmation: 確認用パスワード
+        admin: 管理者権限
+        created_at: 作成時
+        updated_at: 更新時
