refs #15698 タスクのラベルの作成/更新のための関連付け

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -12,6 +12,7 @@ ja:
         updated_at: 更新時
         status: ステータス
         priority: 優先度
+        label: ラベル
       user:
         name: ユーザー名
         email: メールアドレス
