--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -13,6 +13,7 @@ ja:
         status: ステータス
         priority: 優先度
         label: ラベル
+        content: リッチコンテンツ
       user:
         name: ユーザー名
         email: メールアドレス
