--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,3 +10,12 @@ ja:
       previous: <i class="fa fa-angle-left"></i>
       next: <i class="fa fa-angle-right"></i>
       truncate: "..."
+  helpers:
+    page_entries_info:
+      one_page:
+        display_entries:
+          zero: "%{entry_name}がありません"
+          one: "1件の%{entry_name}が表示されています"
+          other: "%{count}件の%{entry_name}が表示されています"
+      more_pages:
+        display_entries: "全%{total}件中%{first}&nbsp;-&nbsp;%{last}件の%{entry_name}が表示されています。"
